--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -17,3 +17,21 @@ body {
 .btn-no-shadow:focus {
     box-shadow: none;
 }
+
+::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: var(--surface-200);
+  }
+   
+  ::-webkit-scrollbar-thumb {
+    background: var(--surface-300);
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--surface-400);
+  }
+  
